run local_generate

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -1723,6 +1723,15 @@
         "networkmanager/transitGatewayRegistration.ts",
         "networkmanager/transitGatewayRouteTableAttachment.ts",
         "networkmanager/vpcAttachment.ts",
+        "nimblestudio/getLaunchProfile.ts",
+        "nimblestudio/getStreamingImage.ts",
+        "nimblestudio/getStudio.ts",
+        "nimblestudio/getStudioComponent.ts",
+        "nimblestudio/index.ts",
+        "nimblestudio/launchProfile.ts",
+        "nimblestudio/streamingImage.ts",
+        "nimblestudio/studio.ts",
+        "nimblestudio/studioComponent.ts",
         "oam/getLink.ts",
         "oam/getSink.ts",
         "oam/index.ts",
