--- a/.github/workflows/nightly-sdk-generation.yml
+++ b/.github/workflows/nightly-sdk-generation.yml
@@ -34,6 +34,8 @@ jobs:
   generate-sdk:
     runs-on: ubuntu-latest
     name: generate-sdk
+    permissions:
+      id-token: write
     steps:
     - name: Checkout Repo
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
