fix(efs): EFS Replication Refresh/Up
The fix for the EFS replication refresh/up failure issue is complete and tested. Here's what was implemented:

Problem

When a user creates an EFS FileSystem with fileSystemProtection.replicationOverwriteProtection: "DISABLED" and it becomes a replication destination, AWS transitions this value to REPLICATING. After
pulumi refresh followed by pulumi up, the provider would attempt to update this property back to DISABLED, causing AWS to reject the update.

Solution

Implemented filterAWSManagedPropertyDiffs in provider/pkg/provider/provider.go that:

- Checks specifically for fileSystemProtection.replicationOverwriteProtection == "REPLICATING"
- Suppresses the diff only when the value is REPLICATING (AWS-managed state)
- Does NOT mark the property as read-only (users can still set it during creation)

Files Changed

| File                                                                  | Description                                                           |
|-----------------------------------------------------------------------|-----------------------------------------------------------------------|
| provider/pkg/provider/provider.go                                     | Added filterAWSManagedPropertyDiffs function called in Diff()         |
| provider/pkg/schema/inputs.go                                         | Helper functions for filtering properties with nested read-only paths |
| provider/pkg/schema/inputs_test.go                                    | Unit tests for the helper functions                                   |
| provider/pkg/provider/provider_2e2_test.go                            | E2E test for the EFS replication scenario                             |
| provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml | Test Pulumi program                                                   |

Fixes #2686

--- a/provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml
+++ b/provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml
@@ -13,24 +13,7 @@ resources:
     properties:
       region: us-west-2
 
-  eastClassicProvider:
-    type: pulumi:providers:aws
-    properties:
-      region: us-east-1
-      skipCredentialsValidation: true
-      skipMetadataApiCheck: true
-
-  efsSource:
-    type: aws-native:efs:FileSystem
-    properties:
-      performanceMode: generalPurpose
-      throughputMode: elastic
-      encrypted: true
-      fileSystemProtection:
-        replicationOverwriteProtection: ENABLED
-    options:
-      provider: ${eastNativeProvider}
-
+  # Destination filesystem - created first, will transition to REPLICATING when replication starts
   efsDestination:
     type: aws-native:efs:FileSystem
     properties:
@@ -42,21 +25,36 @@ resources:
     options:
       provider: ${westNativeProvider}
 
-  efsReplication:
-    type: aws:efs:ReplicationConfiguration
+  # Source filesystem with inline replicationConfiguration (not sidecar resource)
+  efsSource:
+    type: aws-native:efs:FileSystem
     properties:
-      sourceFileSystemId: ${efsSource.id}
-      destination:
-        region: us-west-2
-        fileSystemId: ${efsDestination.id}
+      performanceMode: generalPurpose
+      throughputMode: elastic
+      encrypted: true
+      fileSystemProtection:
+        replicationOverwriteProtection: ENABLED
+      # Use inline replicationConfiguration instead of sidecar resource
+      replicationConfiguration:
+        destinations:
+          - region: us-west-2
+            fileSystemId: ${efsDestination.id}
     options:
-      provider: ${eastClassicProvider}
+      provider: ${eastNativeProvider}
       dependsOn:
-        - ${efsSource}
         - ${efsDestination}
 
 outputs:
+  # Basic identifiers
   sourceId: ${efsSource.id}
-  sourceProtection: ${efsSource.fileSystemProtection.replicationOverwriteProtection}
+  sourceArn: ${efsSource.arn}
   destinationId: ${efsDestination.id}
+  destinationArn: ${efsDestination.arn}
+
+  # FileSystemProtection - destination changes from DISABLED to REPLICATING
+  sourceProtection: ${efsSource.fileSystemProtection.replicationOverwriteProtection}
   destinationProtection: ${efsDestination.fileSystemProtection.replicationOverwriteProtection}
+
+  # Full fileSystemProtection objects for debugging
+  sourceFileSystemProtection: ${efsSource.fileSystemProtection}
+  destinationFileSystemProtection: ${efsDestination.fileSystemProtection}
