test: using aws-classic for e2e test

--- a/provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml
+++ b/provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml
@@ -57,6 +57,9 @@ resources:
         region: us-west-2
     options:
       provider: ${eastAwsProvider}
+      dependsOn:
+        - ${efsSource}
+        - ${efsDestination}
 
 outputs:
   # Basic identifiers
