--- a/provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml
+++ b/provider/pkg/provider/testdata/efs-replication-protection/Pulumi.yaml
@@ -3,6 +3,7 @@ runtime: yaml
 description: Test EFS FileSystem replication where destination transitions to REPLICATING state
 
 resources:
+  # AWS Native providers for EFS file systems
   eastNativeProvider:
     type: pulumi:providers:aws-native
     properties:
@@ -13,24 +14,13 @@ resources:
     properties:
       region: us-west-2
 
-  eastClassicProvider:
+  # Classic AWS provider for ReplicationConfiguration (handles cleanup order correctly)
+  eastAwsProvider:
     type: pulumi:providers:aws
     properties:
       region: us-east-1
-      skipCredentialsValidation: true
-      skipMetadataApiCheck: true
 
-  efsSource:
-    type: aws-native:efs:FileSystem
-    properties:
-      performanceMode: generalPurpose
-      throughputMode: elastic
-      encrypted: true
-      fileSystemProtection:
-        replicationOverwriteProtection: ENABLED
-    options:
-      provider: ${eastNativeProvider}
-
+  # Destination filesystem - created first, will transition to REPLICATING when replication starts
   efsDestination:
     type: aws-native:efs:FileSystem
     properties:
@@ -41,22 +31,52 @@ resources:
         replicationOverwriteProtection: DISABLED
     options:
       provider: ${westNativeProvider}
+      # Ignore replicationConfiguration - AWS adds this to destination filesystems to show
+      # the replication relationship. Since we manage replication via the sidecar resource
+      # (efsReplication), we don't want Pulumi to try to reconcile this read-only property.
+      ignoreChanges:
+        - replicationConfiguration
 
+  # Source filesystem - NO inline replicationConfiguration (use sidecar resource instead)
+  efsSource:
+    type: aws-native:efs:FileSystem
+    properties:
+      performanceMode: generalPurpose
+      throughputMode: elastic
+      encrypted: true
+      fileSystemProtection:
+        replicationOverwriteProtection: ENABLED
+    options:
+      provider: ${eastNativeProvider}
+      dependsOn:
+        - ${efsDestination}
+
+  # Sidecar ReplicationConfiguration resource using classic AWS provider.
+  # This allows Pulumi to delete replication BEFORE the file systems during destroy.
   efsReplication:
     type: aws:efs:ReplicationConfiguration
     properties:
       sourceFileSystemId: ${efsSource.id}
       destination:
-        region: us-west-2
         fileSystemId: ${efsDestination.id}
+        region: us-west-2
     options:
-      provider: ${eastClassicProvider}
+      provider: ${eastAwsProvider}
       dependsOn:
         - ${efsSource}
         - ${efsDestination}
 
 outputs:
+  # Basic identifiers
   sourceId: ${efsSource.id}
-  sourceProtection: ${efsSource.fileSystemProtection.replicationOverwriteProtection}
+  sourceArn: ${efsSource.arn}
   destinationId: ${efsDestination.id}
+  destinationArn: ${efsDestination.arn}
+
+  # FileSystemProtection - destination changes from DISABLED to REPLICATING
+  sourceProtection: ${efsSource.fileSystemProtection.replicationOverwriteProtection}
   destinationProtection: ${efsDestination.fileSystemProtection.replicationOverwriteProtection}
+
+  # Full fileSystemProtection objects for debugging
+  sourceFileSystemProtection: ${efsSource.fileSystemProtection}
+  destinationFileSystemProtection: ${efsDestination.fileSystemProtection}
